Full CRUD implementation with new data generation script to fill DB.